fix: reflect spec changes in impl
